// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ElasticAgentCard props button 1`] = `
<EuiCard
  betaBadgeLabel="Recommended"
  description="The Elastic Agent provides a simple, unified way to
        collect data from your machines."
  footer={
    <EuiButton
      fill={true}
      href="app/integrations/browse"
    >
      Button
    </EuiButton>
  }
  href="app/integrations/browse"
  image="/plugins/kibanaReact/assets/elastic_agent_card.svg"
  paddingSize="l"
  title="Add a Solution integration"
/>
`;

exports[`ElasticAgentCard props href 1`] = `
<EuiCard
  betaBadgeLabel="Recommended"
  description="The Elastic Agent provides a simple, unified way to
        collect data from your machines."
  footer={
    <EuiButton
      fill={true}
      href="#"
    >
      Button
    </EuiButton>
  }
  href="#"
  image="/plugins/kibanaReact/assets/elastic_agent_card.svg"
  paddingSize="l"
  title="Add a Solution integration"
/>
`;

exports[`ElasticAgentCard props recommended 1`] = `
<EuiCard
  betaBadgeLabel="Recommended"
  description="The Elastic Agent provides a simple, unified way to
        collect data from your machines."
  footer={
    <EuiButton
      fill={true}
      href="app/integrations/browse"
    >
      Find an integration for Solution
    </EuiButton>
  }
  href="app/integrations/browse"
  image="/plugins/kibanaReact/assets/elastic_agent_card.svg"
  paddingSize="l"
  title="Add a Solution integration"
/>
`;

exports[`ElasticAgentCard renders 1`] = `
<EuiCard
  betaBadgeLabel="Recommended"
  description="The Elastic Agent provides a simple, unified way to
        collect data from your machines."
  footer={
    <EuiButton
      fill={true}
      href="app/integrations/browse"
    >
      Find an integration for Solution
    </EuiButton>
  }
  href="app/integrations/browse"
  image="/plugins/kibanaReact/assets/elastic_agent_card.svg"
  paddingSize="l"
  title="Add a Solution integration"
/>
`;
